--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,12 @@
 * {
   margin: 0;
-
 }
+
 .container {
   background-image: url("https://storage.needpix.com/rsynced_images/stairs-1689804_1280.jpg");
   width: 100%;
   height: 100vh;
+  overflow: hidden;
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
